test/org/midica/testfiles/failing/opt-tuplet-invalid-3.midica
INCLUDE inc/instruments.midica

VAR $x = 5

{ t=5:
	0  c  /4
}
